--- a/arbeiten/Psychologie/entwurf/config.json
+++ b/arbeiten/Psychologie/entwurf/config.json
@@ -3,11 +3,11 @@
   "name_vorname": "Janik",
   "matrikelnummer": "10252238",
   "studiengang": "Bachelor Wirtschaftspsychologie",
-  "kurs_bezeichnung": "DLBSAPSY01 – Psychologie",
+  "kurs_bezeichnung": "DLBSAPSY01-01 – Psychologie",
   "art_der_arbeit": "Advanced Workbook",
-  "tutor": "",
-  "datum": "",
-  "kurskuerzel": "DLBSAPSY01",
+  "tutor": "Laura Wennmann",
+  "datum": "2026-02-27",
+  "kurskuerzel": "DLBSAPSY01-01",
   "titelblatt": [
     { "text": "IU Internationale Hochschule", "size": 12, "bold": true, "space_after": 0 },
     { "text": "{studiengang}", "size": 11, "space_after": 30 },
